--- a/career-details.html
+++ b/career-details.html
@@ -103,9 +103,6 @@
                 <li>
                   <a href="error404.html">404 Error</a>
                 </li>
-                <li>
-                  <a href="contact.html">Contact</a>
-                </li>
               </ul>
             </li>
             <li class="nav-item">
@@ -222,14 +219,170 @@
             </h3>
           </div>
           <div class="col-lg-6 align-self-end">
-           <p class="des">We’re a diverse team that works as fancies attention to details, enjoys beers on Friday nights and aspires to design the dent in the universe.</p>
+            <p class="des">We’re a diverse team that works as fancies attention to details, enjoys beers on Friday
+              nights and aspires to design the dent in the universe.</p>
           </div>
         </div>
         <h1 class="page-title text-uppercase position-absolute z-n1 pricing-title">MEMBER</h1>
       </div>
     </section>
     <!-- page header section end -->
-    
+    <!-- career details banner section start -->
+    <section class="career-details-banner-section position-relative"
+      style="background: url(assets/img/career/career-banner-2.png) no-repeat center;">
+      <div class="container px-0">
+        <div
+          class="career-details-info d-flex flex-wrap justify-content-between position-absolute bottom-0 start-50 translate-middle-x w-100">
+          <div class="info-item d-flex flex-column">
+            <div class="info-block">
+              <p class="sub-title">Location:</p>
+              <h4 class="title">Mirpur 12, Block C, Dhaka, BD.</h4>
+            </div>
+            <div class="info-block">
+              <p class="sub-title">Experience:</p>
+              <h4 class="title">03+ Years Experience</h4>
+            </div>
+          </div>
+          <div class="info-item d-flex flex-column">
+            <div class="info-block">
+              <p class="sub-title">Date:</p>
+              <h4 class="title">02 August 2024</h4>
+            </div>
+            <div class="info-block">
+              <p class="sub-title">Working Hours:</p>
+              <h4 class="title">10 AM to 06 PM</h4>
+            </div>
+          </div>
+          <div class="info-item d-flex flex-column">
+            <div class="info-block">
+              <p class="sub-title">Job Type:</p>
+              <h4 class="title">Full Time (Remote)</h4>
+            </div>
+            <div class="info-block">
+              <p class="sub-title">Working Days:</p>
+              <h4 class="title">Weekly 5 days (Sun to Thur)</h4>
+            </div>
+          </div>
+          <div class="info-item d-flex flex-column">
+            <div class="info-block">
+              <p class="sub-title">Vacancy:</p>
+              <h4 class="title">No of Vacancies: 05</h4>
+            </div>
+            <div class="info-block">
+              <p class="sub-title">Salary:</p>
+              <h4 class="title">$1k - $1.5k (Monthly)</h4>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- career details banner section end -->
+    <!-- career description start -->
+    <div class="career-description-section">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-10 mx-auto">
+            <h4 class="title">Join the world’s biggest family.</h4>
+            <h6 class="sub-title">CAREERS</h6>
+            <p>Maecenas at metus nec risus porttitor efficitur. Aliquam erat volutpat. Sed laoreet tellus in est
+              pharetra, dictum tempus tortor dignissim. Vestibulum nec lacus a velit volutpat varius. Quisque ex enim,
+              ornare ac libero quis, porttitor molestie neque. Ut vel interdum nunc, id malesuada lacus. Phasellus
+              aliquet dui eu hendrerit eleifend. Etiam vehicula, risus vitae ultrices interdum, massa felis eleifend
+              enim, sit amet scelerisque arcu ligula quis est. Donec id est congue, fringilla massa ac, tincidunt massa.
+              Etiam ullamcorper, nulla vel eleifend pretium, quam orci auctor libero, eget feugiat magna metus at quam.
+              Cras vehicula vel erat ut sodales. Sed ac magna sit amet metus sollicitudin viverra non id metus. Duis
+              gravida placerat metus. Mauris a est at nibh dictum consequat. Phasellus pharetra mollis lacus et
+              lobortis.</p>
+            <p>Mauris auctor nulla ut nisl rutrum fermentum. Suspendse consectetur turpis nec ligula iaculis dapibus.
+              Pellentesue iaculis purus at nibh gravida condimentum. Suspendisse faucibus eros congue turpis vulputate
+              interdum. Donec pellentesque lacus et erat posuere pharetra. Tfaucibus, odio nec condimentum egestas, sem
+              ipsum sagittis ligula, eget cursus lorem mauris quis nisi.</p>
+            <div class="inner-img">
+              <img src="assets/img/career/career-details-inner-img.png" alt="career-inner-img" class="img-fluid w-100">
+            </div>
+            <h4 class="inner-title">Additional Requirements</h4>
+            <ul>
+              <li>Masters with Honors in Accounting from Public, Private or National University</li>
+              <li>Qualified Chartered Accountant or Cost & Management Accountant</li>
+              <li>At least 10 years’ experience, preferably in any manufacturing industry</li>
+              <li>At least 3 years’ experience as head of Accounts and Finance department</li>
+              <li>Experience of RMG sector will get preference.</li>
+            </ul>
+            <h4 class="inner-title">Additional Requirements</h4>
+            <ul>
+              <li>To direct day-to-day operations and activities of department</li>
+              <li>To manage compliance with accounting standards & regulations</li>
+              <li>To be responsible for presenting profitability analysis, product pricing, costing, budgeting etc. to
+                the management</li>
+              <li>To ensure proper maintenance of Accounts records & Software and related all documents.</li>
+              <li>To lead the team to maintain daily accounts related all activities</li>
+              <li>To facilitate annual and internal audit and collaborate with internal & external auditors through
+                necessary documents.</li>
+              <li>To manage regular calculation of Taxes, Customs Duty, statutory returns and Tax, VAT compliance.</li>
+              <li>To prepare and present various statements and reports</li>
+              <li>To present different reconciliation statement related to Accounts.</li>
+              <li>To supervise Inventory Balance</li>
+              <li>To visit factory at least once in a week</li>
+              <li>To perform other relevant duties assigned by management</li>
+            </ul>
+            <div class="email-cv">
+              <h4 class="inner-title">Email your CV</h4>
+              <p>Send your CV to the given email : <a href="mailto:themehullio@mail.com">themehullio@mail.com</a></p>
+            </div>
+            <div class="apply-now">
+              <h4 class="title">Apply Position</h4>
+              <form action="#">
+                <div class="row">
+                  <div class="col-lg-6">
+                    <div class="input-group">
+                      <input type="text" class="form-control rounded-0 px-0" placeholder="Your last name">
+                    </div>
+                  </div>
+                  <div class="col-lg-6">
+                    <div class="input-group">
+                      <input type="text" class="form-control rounded-0 px-0" placeholder="Your first name">
+                    </div>
+                  </div>
+                  <div class="col-lg-6">
+                    <div class="input-group">
+                      <input type="text" class="form-control rounded-0 px-0" placeholder="Your email address*">
+                    </div>
+                  </div>
+                  <div class="col-lg-6">
+                    <div class="input-group">
+                      <input type="text" class="form-control rounded-0 px-0" placeholder="Your phone number*">
+                    </div>
+                  </div>
+                  <div class="col-lg-6">
+                    <div class="input-group">
+                      <input type="text" class="form-control rounded-0 px-0" placeholder="Working experience*">
+                    </div>
+                  </div>
+                  <div class="col-lg-6">
+                    <div class="input-group">
+                      <label class="form-label" for="file">Upload CV*</label>
+                      <input type="file" id="file" class="form-control rounded-0 px-0 d-none">
+                    </div>
+                  </div>
+                  <div class="col-lg-12">
+                    <div class="input-group">
+                      <textarea placeholder="Your Message" class="form-control form-textarea rounded-0 px-0"></textarea>
+                    </div>
+                  </div>
+                  <div class="col-lg-12">
+                    <button type="submit" class="theme-btn position-relative">Submit Now <span
+                        class="d-flex justify-content-center align-items-center position-absolute top-0">
+                        <img src="assets/img/icons/icon-up-right.svg" alt="icon-up-right"></span>
+                    </button>
+                  </div>
+                </div>
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- career description end -->
     </div>
   </main>
   <!-- main area part end -->
