--- a/portfolio.html
+++ b/portfolio.html
@@ -200,137 +200,194 @@
   <!-- header part end -->
 
   <!-- main area part start -->
-  <main>
+  <main class="position-relative">
+    <!-- lines -->
+    <div class="inner-page-lines position-absolute d-flex justify-content-between w-100 top-0 bottom-0 z-n1">
+      <span></span>
+      <span></span>
+      <span></span>
+      <span></span>
+      <span></span>
+    </div>
     <!-- page header section start -->
     <section class="page-header">
-      <div class="container">
-        <h3 class="page-sub-title text-uppercase position-relative">
-          CONTACT DIGISO
-          <img class="position-absolute page-header-shape" src="assets/img/images/page-header-shape.svg"
-            alt="page-header-shape">
-        </h3>
-        <h1 class="page-title text-uppercase position-absolute z-n1 contact-title">Contact</h1>
+      <div class="container px-0">
+        <div class="row">
+          <div class="col-lg-6 align-self-center">
+            <h3 class="page-sub-title text-capitalize w-100">
+              FEATURE PROJECTS
+            </h3>
+          </div>
+          <div class="col-lg-6 align-self-end">
+            <p class="des">View the full case study of our recent featured and awesome works that we created for our
+              clients.</p>
+          </div>
+        </div>
+        <h1 class="page-title text-uppercase position-absolute z-n1 pricing-title">PROJECTS</h1>
       </div>
     </section>
     <!-- page header section end -->
-    <!-- contact info section start -->
-    <section class="contact-info-section">
-      <div class="container">
+    <!-- portfolio section start -->
+    <section class="portfolio-section">
+      <div class="container px-0">
         <div class="row">
-          <div class="col-lg-6">
-            <div class="contact-social-icon d-flex">
-              <a class="d-flex justify-content-center align-items-center" href="#"><img
-                  src="assets/img/icons/contact-icon-1.svg" alt="contact-icon"></a>
-              <a class="d-flex justify-content-center align-items-center" href="#"><img
-                  src="assets/img/icons/contact-icon-2.svg" alt="contact-icon"></a>
-              <a class="d-flex justify-content-center align-items-center" href="#"><img
-                  src="assets/img/icons/contact-icon-3.svg" alt="contact-icon"></a>
-              <a class="d-flex justify-content-center align-items-center" href="#"><img
-                  src="assets/img/icons/contact-icon-4.svg" alt="contact-icon"></a>
-            </div>
-          </div>
-          <div class="col-lg-6">
-            <div class="contact-info">
-              <p>Nunc nec semper arcu, id malesuada est. Integer sodales, magna ac porta ultricies, tortor sapien
-                malesuada dui, sit amet vestibulum magna dui et odio. Donec eu urna vitae orci lacinia malesuada. Duis
-                convallis nunc mi, eu euismod velit cursus vitae. Cras egestas quis dui a dignissim. Nunc ultricies mi
-                quis tristique dapibus.</p>
-              <ul class="list-unstyled">
-                <li><a href="tel:+05(9900)85493"><span>+</span> +05 (9900) 854 93</a></li>
-                <li><a href="mailto:info@rebrandexample.com"><span>+</span> info@rebrandexample.com</a></li>
-                <li><span>+</span> Nandipara, Road 6, Dhaka - 1214</li>
-              </ul>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-    <!-- contact info section end -->
-    <!-- contact form section start -->
-    <section class="contact-form-section">
-      <div class="gmap overflow-hidden position-relative">
-        <iframe
-          src="https://maps.google.com/maps?q=2880%20Broadway,%20New%20York&amp;t=&amp;z=13&amp;ie=UTF8&amp;iwloc=&amp;output=embed"></iframe>
-        <div class="container">
-          <div class="form-main position-absolute bottom-0 z-1 w-100">
-            <h4 class="form-title">Contact Us</h4>
-            <form action="#">
-              <div class="row">
-                <div class="col-lg-6">
-                  <div class="input-group">
-                    <input type="text" class="form-control rounded-0 px-0" placeholder="Your first name">
-                  </div>
-                </div>
-                <div class="col-lg-6">
-                  <div class="input-group">
-                    <input type="text" class="form-control rounded-0 px-0" placeholder="Your last name">
-                  </div>
-                </div>
-                <div class="col-lg-6">
-                  <div class="input-group">
-                    <input type="email" class="form-control rounded-0 px-0" placeholder="Your email address*">
-                  </div>
-                </div>
-                <div class="col-lg-6">
-                  <div class="input-group">
-                    <input type="text" class="form-control rounded-0 px-0" placeholder="Your phone number*">
-                  </div>
-                </div>
-                <div class="col-lg-12">
-                  <div class="input-group">
-                    <textarea placeholder="Your Message" class="form-control form-textarea rounded-0 px-0"></textarea>
-                  </div>
-                </div>
-                <div class="col-lg-12">
-                  <button type="submit" class="theme-btn position-relative">Submit Now <span
-                      class="d-flex justify-content-center align-items-center position-absolute top-0">
-                      <img src="assets/img/icons/icon-up-right.svg" alt="icon-up-right"></span>
-                  </button>
-                </div>
+          <div class="col-lg-4">
+            <div class="portfolio-item">
+              <div class="img">
+                <img src="assets/img/portfolio/portfolio-img-1.png" alt="portfolio-img" class="img-fluid w-100">
               </div>
-            </form>
+              <div class="text">
+                <h4 class="title">Portrait Of Adult Male Working From Home At Night</h4>
+                <a class="view-all-btn2" href="#">
+                  View Full Project <img class="ms-1" src="assets/img/icons/icon-right-2.svg" alt="icon-right">
+                </a>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4">
+            <div class="portfolio-item">
+              <div class="img">
+                <img src="assets/img/portfolio/portfolio-img-2.png" alt="portfolio-img" class="img-fluid w-100">
+              </div>
+              <div class="text">
+                <h4 class="title">Portrait Of Adult Male Working From Home At Night</h4>
+                <a class="view-all-btn2" href="#">
+                  View Full Project <img class="ms-1" src="assets/img/icons/icon-right-2.svg" alt="icon-right">
+                </a>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4">
+            <div class="portfolio-item">
+              <div class="img">
+                <img src="assets/img/portfolio/portfolio-img-3.png" alt="portfolio-img" class="img-fluid w-100">
+              </div>
+              <div class="text">
+                <h4 class="title">Portrait Of Adult Male Working From Home At Night</h4>
+                <a class="view-all-btn2" href="#">
+                  View Full Project <img class="ms-1" src="assets/img/icons/icon-right-2.svg" alt="icon-right">
+                </a>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4">
+            <div class="portfolio-item">
+              <div class="img">
+                <img src="assets/img/portfolio/portfolio-img-4.png" alt="portfolio-img" class="img-fluid w-100">
+              </div>
+              <div class="text">
+                <h4 class="title">Portrait Of Adult Male Working From Home At Night</h4>
+                <a class="view-all-btn2" href="#">
+                  View Full Project <img class="ms-1" src="assets/img/icons/icon-right-2.svg" alt="icon-right">
+                </a>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4">
+            <div class="portfolio-item">
+              <div class="img">
+                <img src="assets/img/portfolio/portfolio-img-5.png" alt="portfolio-img" class="img-fluid w-100">
+              </div>
+              <div class="text">
+                <h4 class="title">Portrait Of Adult Male Working From Home At Night</h4>
+                <a class="view-all-btn2" href="#">
+                  View Full Project <img class="ms-1" src="assets/img/icons/icon-right-2.svg" alt="icon-right">
+                </a>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4">
+            <div class="portfolio-item">
+              <div class="img">
+                <img src="assets/img/portfolio/portfolio-img-6.png" alt="portfolio-img" class="img-fluid w-100">
+              </div>
+              <div class="text">
+                <h4 class="title">Portrait Of Adult Male Working From Home At Night</h4>
+                <a class="view-all-btn2" href="#">
+                  View Full Project <img class="ms-1" src="assets/img/icons/icon-right-2.svg" alt="icon-right">
+                </a>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4">
+            <div class="portfolio-item">
+              <div class="img">
+                <img src="assets/img/portfolio/portfolio-img-7.png" alt="portfolio-img" class="img-fluid w-100">
+              </div>
+              <div class="text">
+                <h4 class="title">Portrait Of Adult Male Working From Home At Night</h4>
+                <a class="view-all-btn2" href="#">
+                  View Full Project <img class="ms-1" src="assets/img/icons/icon-right-2.svg" alt="icon-right">
+                </a>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4">
+            <div class="portfolio-item">
+              <div class="img">
+                <img src="assets/img/portfolio/portfolio-img-8.png" alt="portfolio-img" class="img-fluid w-100">
+              </div>
+              <div class="text">
+                <h4 class="title">Portrait Of Adult Male Working From Home At Night</h4>
+                <a class="view-all-btn2" href="#">
+                  View Full Project <img class="ms-1" src="assets/img/icons/icon-right-2.svg" alt="icon-right">
+                </a>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4">
+            <div class="portfolio-item">
+              <div class="img">
+                <img src="assets/img/portfolio/portfolio-img-9.png" alt="portfolio-img" class="img-fluid w-100">
+              </div>
+              <div class="text">
+                <h4 class="title">Portrait Of Adult Male Working From Home At Night</h4>
+                <a class="view-all-btn2" href="#">
+                  View Full Project <img class="ms-1" src="assets/img/icons/icon-right-2.svg" alt="icon-right">
+                </a>
+              </div>
+            </div>
           </div>
         </div>
       </div>
     </section>
-    <!-- contact form section end -->
+    <!-- portfolio section end -->
+    <!-- work with us section start -->
+    <section class="work-with-us-section">
+      <div class="container">
+        <div class="text text-center">
+          <div class="row">
+            <div class="col-lg-8 mx-auto">
+              <h4 class="sub-title text-uppercase">WORK WITH US</h4>
+              <div class="section-title-block">
+                <h3 class="section-title">We would love to hear more about your project</h3>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- work with us section end -->
+    <!-- lets talk with us section start -->
+    <section class="lets-talk-section">
+      <div class="container px-0 position-relative">
+        <a class="view-all-btn view-all-btn-primary text-uppercase position-absolute start-50 translate-middle-x" href="career-details.html">
+          Let’s Talk With Us
+          <div class="icon"><img src="assets/img/icons/icon-up-right.svg" alt="icon-up-right"></div>
+        </a>
+      </div>
+    </section>
+    <!-- lets talk with us section end -->
+    </div>
   </main>
   <!-- main area part end -->
-  <!-- subscribe now section start -->
-  <section class="subscribe-now-section">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-5">
-          <div class="logo"><a href="index.html"><img src="assets/img/logo/logo2.svg" alt="logo2"></a></div>
-        </div>
-        <div class="col-lg-7">
-          <div class="subscribe">
-            <h4 class="subscribe-title">Subscribe Now</h4>
-            <form action="#">
-              <label>Your Mail</label>
-              <div class="input-group position-relative">
-                <input type="email" placeholder="infoolex@info.com">
-                <button class="position-absolute end-0 bg-transparent border-0" type="submit"><img
-                    src="assets/img/icons/icon-up-right-3.svg" alt="icon-up-right"></button>
-              </div>
-            </form>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-  <!-- subscribe now section end -->
   <!-- footer section start -->
   <footer class="footer-section-five position-relative overflow-hidden">
     <div class="container">
       <div class="row">
-        <div class="col-lg-5">
-          <div class="footer-widget contact-info">
-            <ul class="list-unstyled">
-              <li><a href="tel:+02574-328-301">+02) 574 - 328 - 301</a>
-              </li>
-              <li> <a href="mailto:info@rebrandexample.com">info@rebrandexample.com</a></li>
-            </ul>
+        <div class="col-lg-4">
+          <div class="footer-widget footer-about">
+            <p>3F Mitaka Takagi Building, Musashino-shi,80-0006 Japan</p>
           </div>
         </div>
         <div class="col-lg-2">
@@ -368,7 +425,6 @@
         <p>All Right Reserved © 2024 Digiso</p>
       </div>
     </div>
-    <h4 class="rebrand-title text-uppercase">REBANDE</h4>
   </footer>
   <!-- footer section end -->
 
